k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pki-system
  labels:
    name: pki-system
    app: pki-microservice
